# chriscarl.tools.calculators

./: .flake8  .gitignore  .style.yapf  FEATURES.md  LICENSE  README.md  pyproject.toml
calculators/: discrete.py  infix-postfix.py  numeric.py  truth-tabler.py
tests/: discrete.ps1
